# async_chat

./: .env  .gitignore  README.MD  db_base.db  dz2result.csv  pyproject.toml  requirements.txt  setup.cfg  testPyPi-token.txt
dz1/: 1.py  2.py  3.py  4.py  5.py  6.py
dz2/: 1.py  2.py  3.py
dz3/: client_main.py  server_main.py  server_main_ui.py
dz3/async_chat/: settings.py  utils.py
dz3/async_chat/client/: __init__.py  client.py  client_verifier.py  console.py
dz3/async_chat/jim/: __init__.py  client_schemas.py  common_schemas.py  data_validator.py  server_schemas.py
dz3/async_chat/server/: __init__.py  base_server.py  clients.py  db.py  response_handler.py  server.py  server_verifier.py  test_data.py  user_service.py  users_sockets.py
dz3/async_chat/tests/: test_client_schemas.py
dz3/log_config/: client_log_config.py  client_log_config.yaml  server_log_config.py  server_log_config.yaml
dz6/: dz6.py
dz9/: ex1.py  ex2.py  ex3.py  ex4_a_b.py
project/: client_main.py  client_main_ui.py  server_main.py  server_main_ui.py
project/async_chat/: private_key.pem  publc_key.pem  utils.py
project/async_chat/client/: base_response_handler.py  client.py  client_response_handler.py  client_ui_response_handler.py  client_verifier.py  console.py  current_user.py  message_chain.py
project/async_chat/jim/: __init__.py  client_schemas.py  common_schemas.py  server_schemas.py
project/async_chat/server/: __init__.py  auth.py  (+8 more)
project/log_config/: client_log_config.py
src/nano_async_chat/: client_main.py  client_main_ui.py  server_main.py  server_main_ui.py
(+70 files in other folders)
